[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "graphifyy"
version = "0.3.6"
description = "Turn Rootly incidents, alerts, and teams into a queryable knowledge graph"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["rootly", "incidents", "knowledge-graph", "claude-code", "codex", "graphrag", "community-detection", "incident-management", "on-call", "sre"]
requires-python = ">=3.10"
dependencies = [
    "networkx",
    "tree-sitter",
    "tree-sitter-python",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "tree-sitter-go",
    "tree-sitter-rust",
    "tree-sitter-java",
    "tree-sitter-c",
    "tree-sitter-cpp",
    "tree-sitter-ruby",
    "tree-sitter-c-sharp",
    "tree-sitter-kotlin",
    "tree-sitter-scala",
    "tree-sitter-php",
    "tree-sitter-swift",
    "tree-sitter-lua",
    "tree-sitter-zig",
    "tree-sitter-powershell",
    "tree-sitter-elixir",
]

[project.urls]
Homepage = "https://github.com/Rootly-AI-Labs/rootly-graphify-importer"
Repository = "https://github.com/Rootly-AI-Labs/rootly-graphify-importer"
Issues = "https://github.com/Rootly-AI-Labs/rootly-graphify-importer/issues"

[project.optional-dependencies]
mcp = ["mcp"]
neo4j = ["neo4j"]
pdf = ["pypdf", "html2text"]
watch = ["watchdog"]
leiden = ["graspologic"]
office = ["python-docx", "openpyxl"]
rootly = ["questionary>=2.0"]
all = ["mcp", "neo4j", "pypdf", "html2text", "watchdog", "graspologic", "python-docx", "openpyxl", "questionary>=2.0"]

[project.scripts]
graphify = "graphify.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["graphify*"]

[tool.setuptools.package-data]
graphify = ["skill.md", "skill-codex.md", "skill-opencode.md", "skill-claw.md", "skill-windows.md"]
